--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dash-bootstrap-components==1.6.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+dash_mantine_components==0.14.3
 Flask==3.0.3
 idna==3.7
 importlib_metadata==8.0.0
