--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Template source: https://github.com/github/gitignore/blob/main/Python.gitignore
+
+# CUSTOM ADDITIONS
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
