--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
 retrying==1.3.4
+scipy==1.14.0
 setuptools==70.1.1
 six==1.16.0
 tenacity==8.4.2
