--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ blinker==1.8.2
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.2.1
+cycler==0.12.1
 dash==2.17.1
 dash-bootstrap-components==1.6.0
 dash-core-components==2.0.0
@@ -9,16 +11,21 @@ dash-html-components==2.0.0
 dash-table==5.0.0
 dash_mantine_components==0.14.3
 Flask==3.0.3
+fonttools==4.53.0
 idna==3.7
 importlib_metadata==8.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+kiwisolver==1.4.5
 MarkupSafe==2.1.5
+matplotlib==3.9.0
 nest-asyncio==1.6.0
 numpy==2.0.0
 packaging==24.1
 pandas==2.2.2
+pillow==10.4.0
 plotly==5.22.0
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
