--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 blinker==1.8.2
+cachelib==0.9.0
 certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
@@ -11,6 +12,7 @@ dash-html-components==2.0.0
 dash-table==5.0.0
 dash_mantine_components==0.14.3
 Flask==3.0.3
+Flask-Caching==2.3.0
 fonttools==4.53.0
 idna==3.7
 importlib_metadata==8.0.0
@@ -23,6 +25,7 @@ nest-asyncio==1.6.0
 numpy==2.0.0
 packaging==24.1
 pandas==2.2.2
+patsy==0.5.6
 pillow==10.4.0
 plotly==5.22.0
 pyparsing==3.1.2
@@ -30,9 +33,12 @@ python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
 retrying==1.3.4
+scikit-posthocs==0.9.0
 scipy==1.14.0
+seaborn==0.13.2
 setuptools==70.1.1
 six==1.16.0
+statsmodels==0.14.2
 tenacity==8.4.2
 typing_extensions==4.12.2
 tzdata==2024.1
