--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 dash_mantine_components==0.14.3
+Faker==26.0.0
 Flask==3.0.3
 Flask-Caching==2.3.0
 fonttools==4.53.0
