--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dash-bootstrap-components==1.6.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+dash_ag_grid==31.2.0
 dash_mantine_components==0.14.3
 Faker==26.0.0
 Flask==3.0.3
